[package]
name = "fungible-token"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
chrono = { git = "https://github.com/CRG-AB/chrono", branch = "v0.4.19_time_0.3.11" }

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"